<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="hr.fer.ruazosa.sharemylocation.ForgotYourPasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">


        <ImageView
            android:id="@+id/forgotyourpass"
            android:layout_width="313dp"
            android:layout_height="117dp"
            android:layout_weight="0.21"
            android:clickable="false"
            android:src="@drawable/forgotpass_burned"
            tools:ignore="ContentDescription,InefficientWeight"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp" />



        <ProgressBar
            android:id="@+id/changePassword_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@+id/editReType"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.7"/>


        <TextView
            android:id="@+id/addusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addusername"
            android:layout_marginStart="30dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editUserName"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:inputType="text"
            android:maxLength="20"
            android:paddingStart="5dp"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="90dp"
            app:layout_constraintTop_toBottomOf="@+id/forgotyourpass">
        </EditText>


        <TextView
            android:id="@+id/addmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addmail"
            android:layout_marginStart="30dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editEmail"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:paddingStart="5dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editUserName"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent">
        </EditText>


        <TextView
            android:id="@+id/txtSecondName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addnewpass"
            android:layout_marginStart="30dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editNewPassword"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"></TextView>

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="5dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent">
        </EditText>


        <TextView
            android:id="@+id/repeatpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retypenewpass"
            android:layout_marginEnd="7dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editReType"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/txtSecondName">
        </TextView>

        <EditText
            android:id="@+id/editReType"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="5dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/editNewPassword"
            android:layout_marginRight="24dp"
            app:layout_constraintRight_toRightOf="parent">
        </EditText>


        <Button
            android:id="@+id/save"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:onClick="setNewPassword"
            android:text="@string/setnewpass"
            android:textColor="@android:color/white"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/editReType"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            app:layout_constraintVertical_bias="1.0"/>


    </android.support.constraint.ConstraintLayout>


</ScrollView>