<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="hr.fer.ruazosa.sharemylocation.RegisterActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/photoadd"
            android:layout_width="330dp"
            android:layout_height="117dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.21"
            android:clickable="true"
            android:onClick="addPhoto"
            android:src="@drawable/addphoto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,InefficientWeight"/>



        <ProgressBar
            android:id="@+id/register_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/radio"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintVertical_bias="0.541"/>


        <TextView
            android:id="@+id/addusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/addusername"
            app:layout_constraintBaseline_toBaselineOf="@+id/editUserName"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="text"
            android:maxLength="20"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoadd">
        </EditText>


        <TextView
            android:id="@+id/addmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/addmail"
            app:layout_constraintBaseline_toBaselineOf="@+id/editEmail"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editUserName">
        </EditText>


        <TextView
            android:id="@+id/addpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/addpass"
            app:layout_constraintBaseline_toBaselineOf="@+id/changePassword"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/changePassword"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail">
        </EditText>


        <TextView
            android:id="@+id/repeatpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/repeatpass"
            app:layout_constraintBaseline_toBaselineOf="@+id/editReType"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/editReType"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePassword">
        </EditText>


        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/name"
            app:layout_constraintBaseline_toBaselineOf="@+id/firstname"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/firstname"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="text|textCapSentences"
            android:maxLength="20"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editReType">
        </EditText>


        <TextView
            android:id="@+id/lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/lastname"
            app:layout_constraintBaseline_toBaselineOf="@+id/last"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/last"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="text|textCapSentences"
            android:maxLength="20"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstname">
        </EditText>


        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:text="@string/phone"
            app:layout_constraintBaseline_toBaselineOf="@+id/phonenumber"
            app:layout_constraintLeft_toLeftOf="parent">
        </TextView>

        <EditText
            android:id="@+id/phonenumber"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:inputType="number"
            android:maxLength="20"
            android:paddingStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/last">
            tools:layout_editor_absoluteY="418dp">
        </EditText>

        <Button
            android:id="@+id/save"
            android:layout_width="88dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimary"
            android:onClick="saveReg"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio"
            app:layout_constraintVertical_bias="0.0"/>

        <TextView
            android:id="@+id/iconLabel"
            android:layout_width="77dp"
            android:layout_height="0dp"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/editUserName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoadd"
            tools:layout_constraintLeft_creator="1"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            tools:layout_editor_absoluteY="0dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phonenumber"
            android:weightSum="1">

            <TextView
                android:id="@+id/sexText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.73"
                android:paddingLeft="15dp"
                android:paddingRight="115dp"
                android:text="SEX"/>
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:paddingRight="15dp"
                android:layout_weight="0.43"
                android:onClick="onRadioButtonClicked"
                />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:paddingRight="15dp"
                android:onClick="onRadioButtonClicked"
                />
        </RadioGroup>

    </android.support.constraint.ConstraintLayout>


</ScrollView>









